@@ -22,6 +22,7 @@ lintian-brush (0.39) UNRELEASED; urgency=medium
     that start with 'README'.
   * Don't upgrade beyond debhelper 10 when configure doesn't provide --
     runstatedir and autoreconf is explicitly disabled.
+  * Properly handle empty lines when updating makefiles.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Wed, 23 Oct 2019 02:13:20 +0000
 
